<resources>
    <string name="empty"> </string>
    <string name="CONSUMER_KEY">L5yLYCLm6tKQmwkKG62n3egv8</string>
    <string name="CONSUMER_SECRET">cayRxJIhRQvzEnvSkcg0MfKObnGViaDGj44Y7NP6GsTsvLdvBj</string>
    <string name="app_name">FansCoupon</string>
    <string name="app_crashed"> report crash app </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="app_id">959107434162806</string>
    <string-array name="stAr_app_list">
        <item>Reward\nPrograms</item>
        <item>Special\nOffers</item>
        <item>Friends\nSearch</item>
        <item>Featured\nBrands</item>
    </string-array>
    <string name="load">Loading..</string>
    <string name="fetch">Fetching NearBy Places</string>
    <string name="path">Path</string>
    <string name="of">of </string>
    <string-array name="stAr_distance">
        <item>Travel mode: </item>
        <item>Walking</item>
        <item>Driving</item>
    </string-array>
    <string name="all_brands">All Brands</string>
    <string name="my_brands">My Brands</string>
    <string name="about_us">About Us</string>
    <string name="help">Help</string>
    <string name="support">Support</string>
    <string name="plz_w8">Please wait..</string>
    <string name="no_net">No internet connection!</string>
    <string name="success">Done successfully</string>
    <string name="cancel">Cancel</string>
    <string name="error">Error occurred</string>
    <string name="share_fb_page">Share FaceBook page</string>
    <string name="share_via">Share via FansCoupon ..</string>
    <string name="fan_cop_test">Fans Coupon</string>
    <string name="test">Test</string>
    <string name="remove_from_fav">Are you sure you want to remove from favourites?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="like_to_add">Like to add to favourite</string>
    <string name="plz_relogin">You\'re not login. Continue to login page?</string>
    <string name="plz_relogin_fb">You\'re not login with Facebook. Continue to login page?</string>
    <string name="add_twitter">You must add your twitter account in Edit Profile page. Continue to your Profile page?</string>
    <string name="add_google">You must add your Google account in Edit Profile page. Continue to your Profile page?</string>
    <string name="add_instagram">You must add your Instagram account in Edit Profile page. Continue to your Profile page?</string>
    <string name="ws_err">Can\'t reach server</string>
    <string name="ok">OK</string>
    <string name="all_cop">All Coupons</string>
    <string name="only_for_you">Only for you</string>
    <string name="my_cop">My Coupons</string>
    <string name="my_credits">My Credits</string>
    <string name="points_redemption">Points Redemption</string>
    <string name="donation">Donation</string>
    <string name="good_exp">Good Experience</string>
    <string name="fun_exp">Fun Experience</string>
    <string name="bad_exp">Bad Experience</string>
    <string name="write_exp">Write Experience</string>
    <string name="my_friends">My Friends</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="cop_used_succ">Coupon used successfully</string>
    <string name="brand_lead">Brand Leaderboard</string>
    <string name="fans_lead">Fans Leaderboard</string>
    <string name="offers_type">Offers Type</string>
    <string name="very_special">Very Special</string>
    <string name="ur_fav_brand">Your Favourite Brand</string>
    <string name="interested_in">Interested In</string>
    <string name="me">ME</string>
    <string name="gps_closed">GPS closed .. do you want to open it ?</string>
    <string name="couldnt">Couldn\'t</string>
    <string name="not_supported">This device is not supported</string>
    <string name="fav_cop">Favourite Coupon</string>
    <string name="cant_reach">Can\'t reach server .. try again later</string>
    <string name="call">Call</string>
    <string name="path_of"> Path 0 of 0 </string>
    <string name="load_more">Load More ..</string>
    <string name="sort">Sort</string>
    <string name="filter">Filter</string>
    <string name="follow_us">Follow us on </string>
    <string name="branches">Branches</string>
    <string name="loyalty">Loyalty programs</string>
    <string name="branch_info">Branch Info</string>
    <string name="branch_name">Branch name</string>
    <string name="branch_add">Branch Address</string>
    <string name="branch_ph">Branch phone</string>
    <string name="branch_mob">Branch mobile</string>
    <string name="fax">Fax</string>
    <string name="country">Country</string>
    <string name="egy">Egypt</string>
    <string name="city">City</string>
    <string name="alx">Alexandria</string>
    <string name="my_progressive">My progressive</string>
    <string name="my_points">My points is: </string>
    <string name="num_points">No. of points: </string>
    <string name="adidas">Adidas</string>
    <string name="surv">Surveys</string>
    <string name="cust_type">Customer types and badges: </string>
    <string name="user_rate">User rating</string>
    <string name="add_rate">Add Rating</string>
    <string name="write_ur_comm">Write your comment ..</string>
    <string name="top_member">Top members</string>
    <string name="save">Save</string>
    <string name="special_offer">Special offers</string>
    <string name="no_cop">No Coupons</string>
    <string name="add_fav">Add to favourites</string>
    <string name="available_till">Till:</string>
    <string name="gift">Gift</string>
    <string name="login">Login</string>
    <string name="forget_pw">Forgot your passowrd?</string>
    <string name="user_name">UserName</string>
    <string name="user_name2">User Name</string>
    <string name="pw">Password</string>
    <string name="pw_conf">Confirm Password</string>
    <string name="filter_by">Filter By</string>
    <string name="fb_set">Facebook Settings</string>
    <string name="mob_set">Mobile Settings</string>
    <string name="notification_set">Website Notification Settings</string>
    <string name="affiliate">Affiliate</string>
    <string name="availability">Availability</string>
    <string name="cop_type">Coupon type</string>
    <string name="ear_points_avg">Earned points average</string>
    <string name="lvl_1">Level one:</string>
    <string name="from">from </string>
    <string name="to"> to</string>
    <string name="poin_"> points/</string>
    <string name="lvl_2">Level two:</string>
    <string name="loyalty_inter">Loyalty Programs For user Interaction</string>
    <string name="earn_poin">Earned points</string>
    <string name="every">Every</string>
    <string name="equal"> equal</string>
    <string name="earn_till">Available for</string>
    <string name="from_due">day from due date</string>
    <string name="due_after">Due date after</string>
    <string name="from_earn_date"> from earned points date</string>
    <string name="least_amount">The least amount of points can be replaced</string>
    <string name="brand_friends">Brand Friends</string>
    <string name="alliance">Alliance</string>
    <string name="comments">Comments</string>
    <string name="comment">Comment</string>
    <string name="basic_info">Basic Info</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last Name</string>
    <string name="email">E-mail Address</string>
    <string name="mob_num">Mobile Number</string>
    <string name="ph_num">Phone Number</string>
    <string name="address">Address</string>
    <string name="date_birth">Date of birth</string>
    <string name="soc_med">Social Media</string>
    <string name="fb_page">Facebook page</string>
    <string name="twitter_acc">Twitter acc</string>
    <string name="gplus">g +</string>
    <string name="pages_fb">Pages on Facebook</string>
    <string name="edit_acc">Edit Account</string>
    <string name="logout">Logout</string>
    <string name="no_prem">You must go to settings and enable required permissions</string>
    <string name="regiestered_brand">Registered as brand</string>
    <string name="fb_share"> FB Share</string>
    <string name="other_soc">Other social</string>
    <string name="sort_by">Sort By:</string>
    <string name="newest">Newest</string>
    <string name="oldest">Oldest</string>
    <string name="most_pop">Most Popular</string>
    <string name="offers_cond">Offers conditions</string>
    <string name="prog_type">Program Type:</string>
    <string name="none">None</string>
    <string name="name_of_prog">Name of program:</string>
    <string name="name_prog">Name program</string>
    <string name="sup_fan">Super fan</string>
    <string name="details">Details: </string>
    <string name="cop_fr">Coupon Friends</string>
    <string name="name_surv">name of survey</string>
    <string name="brand_mayor">Brand mayor for month</string>
    <string name="num_cop">No. of coupons</string>
    <string name="top_fans">Top Fans</string>
    <string name="add_comment">Add Comment ..</string>
    <string name="interactions">Interactions</string>
    <string name="type_of_challenge">Type of challenge</string>
    <string name="brand_name">brand name</string>
    <string name="win">Win: </string>
    <string name="challenge">Challenge: </string>
    <string name="collect_and_win">Collect&amp;Win</string>
    <string name="scan_qr_code">Scan QR code</string>
    <string name="contests">Contests</string>
    <string name="you_should_complete_the_following">You should complete the following conditions to be able to use this coupon :</string>
    <string name="after_complete_this_conditions_you_will_be_able">After complete this conditions, you will be able to enjoy this coupon</string>
    <string name="group_buying">Group Buying</string>
    <string name="be_careful_to_share_this_offer">Be careful to share this offer</string>
    <string name="purchases">Purchases</string>
    <string name="if_purchases_is_more_than">If purchases is more than</string>
    <string name="le">LE</string>
    <string name="terms_of_use">Terms of use</string>
    <string name="available_branches">available branches</string>
    <string name="other_instructions">other instructions</string>
    <string name="i_have_read_and_agree">I have read all the previous instructions and agree to them</string>
    <string name="task">Task</string>
    <string name="choose_the_correct_answers">Choose the correct answers</string>
    <string name="choose_the_correct_answer">choose the correct answer</string>
    <string name="survey">Survey</string>
    <string name="interact_on">Interact on</string>
    <string name="required_interaction">Required interaction</string>
    <string name="alpha">alpha</string>
    <string name="who_dare">Who dare</string>
    <string name="agree">Agree</string>
    <string name="not_eligible">You are not eligible to add this coupon</string>
    <string name="eligible">You are eligible to get this coupon</string>
    <string name="you_should_read">You should read these instructions carefully before adding this coupon:</string>
    <string name="coup">Coupons</string>
    <string name="credits">Credits</string>
    <string name="exp">My Experiences</string>
    <string name="defaultBrands">Default</string>
    <string name="yourPoints">Your points</string>
    <string name="brandDate">Brand date</string>
    <string name="brandName">Brand name</string>
    <string name="no_customerTypes">No customer types</string>
    <string name="no_badges">No badges</string>
    <string name="badges">Badges</string>
    <string name="brands">Brands</string>
    <string name="friends">My Friends</string>
    <string name="my_account">My Account</string>
    <string name="settings">Settings</string>
</resources>