<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_bg">

    <TextView
        android:id="@+id/tv_agree"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center_vertical"
        android:background="@color/red"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/agree"
        android:textColor="@color/white" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/tv_agree"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@color/white"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <ImageView
                        android:id="@+id/icon_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/win" />

                    <TextView
                        android:id="@+id/win_all"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="7dp"
                        android:layout_marginStart="7dp"
                        android:layout_marginTop="5dp"
                        android:textSize="20dp" />

                    <!--<TextView-->
                    <!--android:id="@+id/coup_name"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:text="Coupon"-->
                    <!--android:textSize="20dp" />-->
                </LinearLayout>


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/warning_sign" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="15dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/not_eligible"
                    android:textColor="@color/red"
                    android:textSize="20dp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginStart="15dp"
                android:background="@color/white"
                android:padding="10dp"
                android:text="@string/you_should_complete_the_following"
                android:textSize="16dp" />

            <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginLeft="15dp"-->
            <!--android:layout_marginRight="15dp"-->
            <!--android:layout_marginTop="15dp"-->
            <!--android:background="@color/white"-->
            <!--android:orientation="vertical">-->

            <ListView
                android:id="@+id/listView_couponCondition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@color/white" />
            <!--android:divider="@null"-->

            <!--<com.github.paolorotolo.expandableheightlistview.ExpandableHeightListView-->
            <!--android:id="@+id/ex_lv_cop_cond"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginLeft="15dp"-->
            <!--android:layout_marginRight="15dp"-->
            <!--android:background="@color/white"-->
            <!--android:divider="@null"></com.github.paolorotolo.expandableheightlistview.ExpandableHeightListView>-->


            <!--</LinearLayout>-->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@color/white"
                android:padding="10dp"
                android:text="@string/after_complete_this_conditions_you_will_be_able"
                android:textColor="@color/red"
                android:textSize="15dp" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>