<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/imgv_friend"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        app:civ_border_color="#FF000000"
        app:civ_border_width="1dp" />

    <TextView
        android:id="@+id/tv_friendName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rel_fan_badges"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <View
                android:layout_width="4dp"
                android:layout_height="40dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:background="@color/red" />

            <TextView
                android:id="@+id/tv_myCredit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/credits"
                android:textColor="@color/black" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/tv_myCredit"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:background="@color/grey_bg2" />

        </RelativeLayout>

        <TextView
            android:id="@+id/tv_no_customerTypes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/no_customerTypes"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:visibility="gone" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp">

            <HorizontalScrollView
                android:id="@+id/cred_horizontalScrollView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">

                <LinearLayout
                    android:id="@+id/cred_customerLinear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:orientation="horizontal">
                    <!--<ImageView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_gravity="center"-->
                    <!--android:src="@drawable/badge_fan"/>-->
                </LinearLayout>

            </HorizontalScrollView>

        </RelativeLayout>
        <!--<ListView-->
        <!--android:id="@+id/lv_totalCredit"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="0dp"-->
        <!--android:layout_marginLeft="15dp"-->
        <!--android:layout_marginRight="15dp" />-->

        <RelativeLayout
            android:id="@+id/rel_fan_badges2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@color/white">

            <View
                android:layout_width="4dp"
                android:layout_height="40dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:background="@color/red" />

            <TextView
                android:id="@+id/tv_myCredit2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/badges"
                android:textColor="@color/black" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/tv_myCredit2"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:background="@color/grey_bg2" />

        </RelativeLayout>

        <!--<TextView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginLeft="15dp"-->
        <!--android:layout_marginStart="15dp"-->
        <!--android:layout_marginRight="15dp"-->
        <!--android:paddingStart="10dp"-->
        <!--android:paddingLeft="10dp"-->
        <!--android:background="@color/white"-->
        <!--android:paddingBottom="10dp"-->
        <!--android:paddingTop="10dp"-->
        <!--android:text="@string/my_badges"-->
        <!--android:textColor="@color/black" />-->

        <TextView
            android:id="@+id/tv_no_badges"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/no_badges"
            android:textColor="@color/black"
            android:textSize="16dp"
            android:visibility="gone" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp">

            <HorizontalScrollView
                android:id="@+id/badge_horizontalScrollView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">

                <LinearLayout
                    android:id="@+id/badge_badgesLinear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:orientation="horizontal">
                    <!--<ImageView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_gravity="center"-->
                    <!--android:src="@drawable/badge_fan"/>-->
                </LinearLayout>

            </HorizontalScrollView>

        </RelativeLayout>

        <!--<ListView-->
        <!--android:id="@+id/lv_totalBadges"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="0dp"-->
        <!--android:layout_marginLeft="15dp"-->
        <!--android:layout_marginRight="15dp" />-->

    </LinearLayout>


    <View
        android:layout_width="270dp"
        android:layout_height="2dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp"
        android:background="@color/grey_bg" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <HorizontalScrollView
            android:id="@+id/horizontalScrollView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <LinearLayout
                android:id="@+id/brandsLinear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="horizontal">
                <!--<ImageView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_gravity="center"-->
                <!--android:src="@drawable/badge_fan"/>-->
            </LinearLayout>

        </HorizontalScrollView>

    </RelativeLayout>


    <!--<RelativeLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content">-->


    <!--<HorizontalScrollView-->
    <!--android:id="@+id/brandBadgesScroll"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_centerHorizontal="true"-->
    <!--android:background="@color/white"-->
    <!--android:gravity="center_horizontal"-->
    <!--android:padding="5dp">-->

    <!--<RelativeLayout-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_gravity="center"-->
    <!--android:orientation="horizontal"-->
    <!--android:padding="5dp">-->

    <!--<ImageView-->
    <!--android:id="@+id/leftArrow"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_centerVertical="true"-->
    <!--android:layout_gravity="center_vertical"-->
    <!--android:layout_alignParentLeft="true"-->
    <!--android:src="@drawable/left_arrow" />-->

    <!--<LinearLayout-->
    <!--android:id="@+id/brandsLinear"-->
    <!--android:layout_toRightOf="@+id/leftArrow"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_gravity="center_vertical"-->
    <!--android:layout_centerVertical="true"-->
    <!--android:background="@color/white"-->
    <!--android:orientation="horizontal">-->

    <!--</LinearLayout>-->

    <!--<ImageView-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_centerVertical="true"-->
    <!--android:layout_toRightOf="@+id/brandsLinear"-->
    <!--android:layout_gravity="center_vertical"-->
    <!--android:src="@drawable/right_arrow" />-->

    <!--</RelativeLayout>-->

    <!--</HorizontalScrollView>-->
    <!--</RelativeLayout>-->

</LinearLayout>